# ueditor

./: .gitignore  .gitmodules  CMakeLists.txt
assets/models/: cube.fbx
assets/shaders/: color.glsl  fallback.glsl  texture.glsl
source/ueditor/core/: editor_window.cpp  editor_window.h  library_loader.cpp  library_loader.h  main.cpp  output_window.cpp  reflection.h
src/ueditor/core/: assets.cpp  assets.h  camera_controller.h  component_drawer.h  component_drawers.cpp  component_drawers.h  editor_window.cpp  editor_window.h  explorer_window.cpp  explorer_window.h  library.cpp  library.h  library_loader.cpp  library_loader.h  main.cpp  outline_window.cpp  outline_window.h  output_window.h  properties_window.cpp  properties_window.h  reflection.cpp  reflection.h  scene_serializer.cpp  scene_serializer.h  selection.cpp  selection.h  viewport_window.cpp  viewport_window.h
src/ueditor/core/ui/: editor_imgui.cpp  editor_imgui.h
